Fixed alignment, size , fonts of links , modified background , also added hover and hover color for the links.

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,19 +1,31 @@
-html, body {
-text-align: center;
-}
-p {text-align: left;}
-
 body {
 	margin: 25;
 	padding: 30;
 	background-image:url(../images/a.jpg);
-	background-size:cover;
-	text-align: left;
 	font-family: Georgia, Times New Roman, Times, serif;
-	font-size: 40px;
-	color: #00000;
+	
 }
 
+#header ul {
+
+	padding: 0px;
+	list-style-type: none;
+	overflow:hidden;
+	float:left;
+}
+#header ul li {
+	float:left;
+	margin: 0px;
+	line-height:80px;
+	color:#FFFFFF;
+	text-align:center;
+	font-size:36px;
+	padding-left:10px;
+	padding-right:20px;	
+}
+#header ul li a:hover{
+color:#07B3F4;
+}
 
 
 
